Sigo arreglando css.

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -52,14 +52,16 @@
         <article class="estructura">
             <div th:replace="templates/form-publicacion :: form-publi(${publicacion})"></div>
         </article>
-
-        <!--separe el div de ordenar por fuera de la estructura de cada card porque no se donde iria-->
-        <div class="botones-quePublisVer">
-            <div class="ordenar-por">
-                <p class="ordernar-por_text">Ordenar Por</p><span><button>Ordenar por</button></span>
-            </div>
-        </div>
-
+        <article class="box_ordenarPor">
+            <div class="separador"></div>
+            <form>
+                <label for="ordenar">Ordenar por: </label>
+                <select name="ordenar" id="ordenar">
+                    <option value="p">Principal</option>
+                    <option value="r">Recientes</option>
+                </select>
+            </form>
+        </article>
             <!-- se reemplaza por el articulo que contiene c/u de las publis en divTarjeta -->
         <article th:replace="templates/divTarjetaPublicacion :: tarjetaPublicacion(${dtopubli})" >
         </article>
@@ -76,11 +78,6 @@
             <img class="user2" th:src="@{/imagenes/user2.png}">
             <img class="user2" th:src="@{/imagenes/user2.png}">
             <img class="user2" th:src="@{/imagenes/user2.png}">
-            <!--<img class="user2" src="../../../resources/core/imagenes/user2.png">
-            <img class="user2" src="../../../resources/core/imagenes/user2.png">
-            <img class="user2" src="../../../resources/core/imagenes/user2.png">
-            <img class="user2" src="../../../resources/core/imagenes/user2.png">
-            <img class="user2" src="../../../resources/core/imagenes/user2.png">-->
         </div>
     </aside>
 </main>
