--- a/tallerwebi-base/src/main/webapp/resources/core/css/home.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/home.css
@@ -50,9 +50,6 @@ a:hover {
     border-radius: 1rem;
     color: #BDBDBD;
     padding: 2rem;
-
-    /*agregado para checkear*/
-    border:1px solid green;
 }
 .palabra{
     font-size: 3rem;
@@ -75,6 +72,7 @@ a:hover {
  /*Columna central*/
  .box_ordenarPor{
     display: flex;
+    align-items: center;
     gap: 1rem;
  }
  .separador {
@@ -85,9 +83,35 @@ a:hover {
  }
  .box_ordenarPor form{
     display: flex;
+    gap: 1rem;
+    align-items: center;
     color: #BDBDBD;
     font-size: small;
  }
+ .box_ordenarPor form label{
+    width: 11rem;
+ }
+.box_ordenarPor select {
+     width: 100%;
+     height: 2rem;
+     background-color: #1B2227;
+     color: #F5F5F5;
+     border: 1px solid #1B2227;
+     border-radius: 0.3rem;
+     padding: 0.3rem;
+     appearance: none;
+     cursor: pointer;
+}
+.box_ordenarPor select:focus {
+  outline: none;
+  border: 1px solid #27AE60;
+  box-shadow: 0 0 0.3rem #27AE60;
+}
+
+.box_ordenarPor select option {
+  background-color: #181D22;
+  color: #F5F5F5;
+}
 .columnaDos{
     display: flex;
     flex-direction: column;
@@ -96,7 +120,6 @@ a:hover {
 .box_comentario{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
 }
 .box_comentario textarea{
       font-family: "Inter", sans-serif;
@@ -106,7 +129,7 @@ a:hover {
       width: 100%;
       height: 5rem;
       padding: 0 0.8rem;
-      color: #E0E0E0;
+      color: #BDBDBD;
       font-size: 15px;
       outline: none;
       resize: none;
@@ -139,10 +162,22 @@ a:hover {
       align-items: center;
       justify-content: center;
 }
-.botones_acciones button{
-    background-color: #1E1E1E;
+.botones_acciones {
+    all: unset; /* borra todos los estilos nativos del navegador */
     cursor: pointer;
-    border-radius: 0.5rem;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+.botones_acciones img {
+    width: 2rem;
+    height: 2rem;
+    cursor: pointer;
+}
+.btns_interaccion_publicacion{
+    display: flex;
+    gap: 2rem;
+    margin-bottom: 1rem;
 }
  /*Columna derecha*/
 .columnaTres{
