Arreglé algunas clases.

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/templates/divTarjetaPublicacion.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/templates/divTarjetaPublicacion.html
@@ -20,11 +20,11 @@
             <span th:text="${dtopubli.cantLikes}"></span>
         </form>
         <!-- Botón para mostrar formulario de comentario -->
-        <button class="botones_acciones" type="button">
+        <button class="botones_acciones comentarBtn" type="button">
             <img th:src="@{/imagenes/comentar.png}" alt="Comentar" />
         </button>
         <!-- Botón para mostrar comentarios -->
-        <button class="botones_acciones" type="button">
+        <button class="botones_acciones verComentariosBtn" type="button">
             <img th:src="@{/imagenes/vercomentario.png}" alt="Ver comentario" />
         </button>
         <!-- Contenedor de comentarios oculto inicialmente -->
@@ -37,7 +37,7 @@
         </div>
     </section>
     <!-- Formulario para comentar -->
-    <form method="POST" th:action="@{/publicacion/comentar/{id}(id=${dtopubli.id})}" class="box_comentario">
+    <form method="POST" th:action="@{/publicacion/comentar/{id}(id=${dtopubli.id})}" class="box_comentario formComentario" style="display: none;">
         <textarea name="texto" rows="3" cols="40" placeholder="Escribe tu comentario..."></textarea>
         <br/>
         <div class="box_publi_botones">
