--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/templates/form-publicacion.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/templates/form-publicacion.html
@@ -4,22 +4,27 @@
 
 
 <form  th:fragment="form-publi(publicacion)" class="box_comentario" method="POST" action="/spring/publicaciones">
-    <!--<input name="descripcion" id="publicacion" placeholder="Escribe algo"/>-->
     <textarea name="descripcion" id="publicacion" placeholder="Escribe algo"></textarea>
     <p th:if="${errorPubli != null}" th:text="${errorPubli}" class="error"></p>
 
 
-    <div class="box_publi_botones">
-        <button name = "archivo">attach_file</button>
-        <button>Visibilidad</button>
-        <button type="submit" name="nueva-publicacion">Publicar</button>
+    <div class="box_botones_acciones">
+        <button name = "archivo" class="botones_acciones" type="button">
+            <img th:src="@{/imagenes/adjuntar.png}" alt="Adjuntar" />
+            <!--<img src="../../../../resources/core/imagenes/adjuntar.png" alt="Adjuntar" />-->
+        </button>
+        <button type="button" class="botones_acciones">
+            <img th:src="@{/imagenes/vercomentario.png}" alt="Visibilidad" />
+            <!--<img src="../../../../resources/core/imagenes/vercomentario.png" alt="Visibilidad" />-->
+        </button>
+        <button type="submit" name="nueva-publicacion" class="botones_acciones">
+            <img th:src="@{/imagenes/publicar.png}" alt="Publicar" />
+            <!--<img src="../../../../resources/core/imagenes/publicar.png" alt="Publicar" />-->
+        </button>
     </div>
 
     <script>
-
     </script>
 </form>
-
-
 </body>
 </html>
