--- a/tallerwebi-base/src/main/webapp/resources/core/css/registrarse.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/registrarse.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-color: #0F1317;
+  background-color: #343639;
   font-family: "Inter", sans-serif;
   min-height: 100vh;
   margin: 0;
@@ -42,7 +42,7 @@ input[type=number] {
 }
 
 .contenedor {
-  background-color: #181D22;
+  background-color: #404345;
   width: 40rem;
   border-radius: 0.8rem;
   padding: 0 2.5rem 2rem;
@@ -76,8 +76,8 @@ form {
 }
 
 input {
-  background-color: #1B2227;
-  border: 1px solid #1B2227;
+  background-color: #616466;
+  border: 1px solid #616466;
   border-radius: 0.4rem;
   width: 100%;
   height: 2.8rem;
@@ -137,9 +137,9 @@ label {
 .carreras select {
   width: 100%;
   height: 2rem;
-  background-color: #1B2227;
+  background-color: #616466;
   color: #F5F5F5;
-  border: 1px solid #1B2227;
+  border: 1px solid #616466;
   border-radius: 0.3rem;
   padding: 0.3rem;
   appearance: none;
@@ -153,7 +153,7 @@ label {
 }
 
 .carreras select option {
-  background-color: #181D22;
+  background-color: #616466;
   color: #F5F5F5;
 }
 
