--- a/tallerwebi-base/src/main/webapp/resources/core/css/registrarse.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/registrarse.css
@@ -161,6 +161,9 @@ label {
   background-color: #27AE60;
   color: #0F1317;
 }
+.error{
+    color: red;
+}
 
 @media (max-width: 1200px) {
   .contenedor {
