Agrego una anotación sobre el atributo fecha de nacimiento para que no haya errores con el binding.

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -27,7 +27,7 @@
             <input th:field="*{email}" id="email" placeholder="Email" required/>
             <input th:field="*{password}" type="password" id="password" placeholder="Contraseña" required/>
             <input th:field="*{dni}" id="dni" type="number" placeholder="D.N.I" required/>
-            <!--<input th:field="*{fechaNacimiento}" id="fecha" type="date" placeholder="Fecha de nacimiento" required/>-->
+            <input th:field="*{fechaNacimiento}" id="fecha" type="date" required/>
             <div class="carreras">
                 <label for="carrera">Carrera</label>
                 <select th:field="*{carrera.id}" id="carrera" required>
