Agrego código para que se puedan actualizar los campos de la vista miPerfil.html.

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -20,6 +20,7 @@
             <a href="/spring/miPerfil">Mi Perfil</a>
             <a href="/spring/miPerfil">Notificaciones</a>
             <a href="/spring/miPerfil">Mensajes</a>
+            <a href="/spring/miPerfil">Cerrar sesión</a>
         </div>
     </nav>
 </header>
@@ -41,7 +42,7 @@
         </div>
         <div class="estructura">
             <ul>
-                <li>Guardados</li>
+                <li>Elementos guardados</li>
                 <li>Grupos</li>
             </ul>
         </div>
